--- a/static/css/base.scss
+++ b/static/css/base.scss
@@ -378,9 +378,9 @@ textarea {
     background: url('../images/loading1.png') no-repeat;
     animation: loadingCircle 1.2s infinite linear;
     display: inline-block;
-    width: 20px;
-    height: 20px;
-    background-size: 20px;
+    width: 0.4rem;
+    height: 0.4rem;
+    background-size: 0.4rem;
     vertical-align: middle;
     margin-right: 4px;
 }
